--- a/lib/tasks/volte/pages/lend.liquid
+++ b/lib/tasks/volte/pages/lend.liquid
@@ -190,6 +190,9 @@ name: Lend
       <p>
         We recommend that all Lenders hold a security bond over their items. This ensures you can claim compensation from the Borrower if the item is damaged or in rare circumstances not returned. The amount of the security bond is up to the Lender.
       </p>
+      <p>
+        Please note that The Volte does not take the amount of the bond or place a charge on the credit card for the bond amount. The Volte stores the Borrower's credit card details on its secure, encrypted payment system in the event the Lender needs to call on the bond. If the Lender wishes to claim the bond, the Lender must make a claim within 5 days of return of the item or before the item is re-rented, whichever is earlier If a claim is made, The Volte will mediate and collect payment from the Borrower, as necessary.
+      </p>
       <h3>
         What if I receive a try-on request from a Borrower?
       </h3>
