NM-6096 fix profile tags

--- a/lib/tasks/litvault/liquid_views/registrations/show.liquid
+++ b/lib/tasks/litvault/liquid_views/registrations/show.liquid
@@ -139,7 +139,7 @@
         {% endif %}
 
         {% if user.tags.size > 0 %}
-          <div class="tags-a">
+          <div class="tags-a show-all-tags">
             <h4>Tags</h4>
             <ul>
               {% for tag in user.tags %}
