VOL-36 Alignment of text

--- a/lib/tasks/volte/pages/lend.liquid
+++ b/lib/tasks/volte/pages/lend.liquid
@@ -122,7 +122,7 @@ name: Lend
       <p>
         The Volte platform exists to provide value to users by allowing users to tap into their under-utilized high-end designer clothes. Most designer dresses, outerwear, handbags, accessories and millinery are accepted so long as it meets the following criteria: 
       </p>
-      <ul>
+      <ul class="full-paragraph">
         <li>
           Minimum RRP (Recommended Retail Price) is above $150 
         </li>
@@ -133,7 +133,7 @@ name: Lend
       <p>
         The below does not meet The Volte listing criteria: 
       </p>
-      <ul>
+      <ul class="full-paragraph">
         <li>
           Casual wear is not currently accepted 
         </li>
