VOL-37 Courier page edit

--- a/lib/tasks/volte/pages/courier.liquid
+++ b/lib/tasks/volte/pages/courier.liquid
@@ -89,7 +89,7 @@ name: Courier
     <p>
       Parcels travel by road in vans and lorries, and are also handled by sorting machines so there will be some knocks and bumps along the way. Good packaging helps keep the contents safe and makes sure everything arrives as intended.
     </p>
-    <ol>
+    <ol class="bottom-spaced">
       <li>
         Your packaging materials need to be tough and strong as you want a nice hard shell for your products to travel in.
       </li>
