VOL-38 Courier page additions

--- a/lib/tasks/volte/pages/courier.liquid
+++ b/lib/tasks/volte/pages/courier.liquid
@@ -121,7 +121,7 @@ name: Courier
       Delivery times
     </h3>
     <p>
-      It is up to the Lender and Borrower to ensure that items are delivered by the agreed date.
+      It is up to the Lender and Borrower to ensure that items are delivered by the agreed date. We ship to many other locations. Please contact us at <a href="mailto:support@thevolte.com">support@thevolte.com</a> to find out our shipping times and costs for other locations.
     </p>
     <table>
       <thead>
