VOL-38 Courier page additions

--- a/lib/tasks/volte/liquid_views/dashboard--company--reservations--reservation.liquid
+++ b/lib/tasks/volte/liquid_views/dashboard--company--reservations--reservation.liquid
@@ -126,5 +126,7 @@
 
   {% include 'dashboard/company/host_reservations/owner_actions', reservation: reservation %}
 
-  <p>Before approving rental, you need to set up your <a href="#payment_transfers">Payment Transfers</a>.</p>
+  {% unless current_user.has_verified_merchant_account %}
+    <p>Before approving rental, you need to set up your <a href="{{ company.payout_path }}">Merchant Account</a>.</p>
+  {% endunless %}
 </div>
