--- a/lib/tasks/volte/liquid_views/layouts--theme_header.liquid
+++ b/lib/tasks/volte/liquid_views/layouts--theme_header.liquid
@@ -43,7 +43,7 @@
 
                 <li>
                   <a class="nav-link" href="{{ 'dashboard_company_transactable_type_transactables_path' | generate_url: platform_context.transactable_types.first.id }}">
-                    My Projects
+                    My Items
                     {% if pending_transactables_count > 0 %}
                       <span class="count">{{ pending_transactables_count }}</span>
                     {% endif %}
