--- a/lib/tasks/volte/pages/terms-of-service.liquid
+++ b/lib/tasks/volte/pages/terms-of-service.liquid
@@ -187,7 +187,7 @@ name: Terms of Service
 <p><strong>General</strong></p>
 <p>The failure of The Volte to enforce any right or provision of these Terms will not constitute a waiver of future enforcement of that right or provision. The waiver of any such right or provision will be effective only if in writing and signed by a duly authorised representative of The Volte. Except as expressly set forth in these Terms, the exercise by either party of any of its remedies under these Terms will be without prejudice to its other remedies under these Terms or otherwise. If for any reason an arbitrator or a court of competent jurisdiction finds any provision of these Terms invalid or unenforceable, that provision will be enforced to the maximum extent permissible and the other provisions of these Terms will remain in full force and effect.</p>
 <p><strong>Contacting The Volte</strong></p>
-<p>If you have any questions about these Terms please contact The Volte at&nbsp;support@thevolte.com.</p>
+<p>If you have any questions about these Terms please contact The Volte at&nbsp;{{ platform_context.support_email }}.</p>
 
 </main>
 </div>
