--- a/app/views/listings/orders/index.html.liquid
+++ b/app/views/listings/orders/index.html.liquid
@@ -3,20 +3,16 @@
     <div class="row">
       <div class="col-xs-12">
         <h3>
-          Please wait while we redirect you to your Order.
+          You can now continue to your Order.
         </h3>
 
         <form id="order_form_{{ transactable.id }}" novalidate="novalidate" class="order" action="{{ 'listing_orders_path' | generate_url: transactable }}" accept-charset="UTF-8" method="post">
           <input name="utf8" type="hidden" value="">
-          <input name="authenticity_token" value="{{ form_authenticity_token }}" data-authenticity-token type="hidden">
+          <input name="authenticity_token" value="{{ form_authenticity_token }}" type="hidden">
           <input value="{{ transactable.id }}" type="hidden" name="order[transactable_id]" id="order_transactable_id">
           <input value="{{ transactable.action_type.pricings.first.id }}" type="hidden" name="order[transactable_pricing_id]" id="order_transactable_pricing_id">
           <input type="submit" class="button button-default" value="Continue to Checkout">
         </form>
-
-        <script>
-          document.querySelector("#order_form_{{ transactable.id }}").submit();
-        </script>
       </div>
     </div>
   </main>
