--- a/lib/tasks/volte/liquid_views/home--index.liquid
+++ b/lib/tasks/volte/liquid_views/home--index.liquid
@@ -185,13 +185,14 @@ partial: false
       </header>
       <div class="boxes">
         <figure class="box">
-          <img alt="SASKIA DE REUCK" height="200" src="https://d2rw3as29v290b.cloudfront.net/instances/194/uploads/ckeditor/picture/data/2780/saskia_de_reuck.jpg" width="200" /><figcaption itemprop="review" itemscope="" itemtype="http://schema.org/Review"><blockquote itemprop="reviewBody">“I love being able to browse so many Lender’s closets. I borrowed a dress through The Volte for a recent event and was impressed by the door-to-door service. I didn’t have to worry about a thing. Easier than shopping!”</blockquote><em itemprop="author">SASKIA DE REUCK</em></figcaption>
+          <img alt="Natalie Fardella" width="187"  height="187" src="https://d2rw3as29v290b.cloudfront.net/instances/194/uploads/ckeditor/picture/data/3078/1-natalie-borrower.jpg"/><figcaption itemprop="review" itemscope="" itemtype="http://schema.org/Review"><blockquote itemprop="reviewBody">“I love being able to browse so many Lender’s closets. I borrowed a dress through The Volte for a recent event and was impressed by the door-to-door service. I didn’t have to worry about a thing. Easier than shopping!”</blockquote><em itemprop="author">NATALIE FARDELLA</em></figcaption>
         </figure>
         <figure class="box">
-          <img alt="LYDIA KIRKE" height="200" src="https://d2rw3as29v290b.cloudfront.net/instances/194/uploads/ckeditor/picture/data/2778/lydia_kirke.jpg" width="200" /><figcaption itemprop="review" itemscope="" itemtype="http://schema.org/Review"><blockquote itemprop="reviewBody">“Being able to earn income from my designer dresses is amazing. The Volte takes care of all of the logistics and I have peace of mind that I can hold a bond and all users are verified.”</blockquote><em itemprop="author">LYDIA KIRKE</em></figcaption>
+          <img alt="Sinead O'Neil" width="187" height="187" src="https://d2rw3as29v290b.cloudfront.net/instances/194/uploads/ckeditor/picture/data/3079/2-sinead-lender.jpg" /><figcaption itemprop="review" itemscope="" itemtype="http://schema.org/Review"><blockquote itemprop="reviewBody">“Being able to earn income from my designer dresses is amazing. The Volte takes care of all of the logistics and I have peace of mind that I can hold a bond and all users are verified.”</blockquote><em itemprop="author">LYDIA KIRKE</em></figcaption>
         </figure>
         <figure class="box">
-          <img alt="SARA MCKAY" height="200" src="https://d2rw3as29v290b.cloudfront.net/instances/194/uploads/ckeditor/picture/data/2779/sara_mckay.jpg" width="200" /><figcaption itemprop="review" itemscope="" itemtype="http://schema.org/Review"><blockquote itemprop="reviewBody">“Aliquam vicis et ad enim utinam ad. Modo facilisi capto mara. Iustum macto singularis feugait vel plaga damnum feugait consequat eum lobortis.”</blockquote><em itemprop="author">SARA MCKAY</em></figcaption>
+          <img alt="Little Black Book" width="187" height="187" src="https://d2rw3as29v290b.cloudfront.net/instances/194/uploads/ckeditor/picture/data/3080/3-little-black-book-logo.jpg" /><figcaption itemprop="review" itemscope="" itemtype="http://schema.org/Review"><blockquote itemprop="reviewBody">“The Volte has enabled me to take my business online and reach a broader national audience. I also love how I am able to access their large number of complimentary services at a low cost.
+”</blockquote><em itemprop="author">LITTLE BLACK BOOK</em></figcaption>
         </figure>
       </div>
     </section>
