--- a/lib/tasks/litvault/liquid_views/dashboard/layout/_left_navigation.liquid
+++ b/lib/tasks/litvault/liquid_views/dashboard/layout/_left_navigation.liquid
@@ -140,29 +140,32 @@
         {% assign analytics_path = 'dashboard_company_analytics_path' | generate_url %}
         {% assign analytics_selected = current_path | matches: analytics_path %}
 
-        <li id="dashboard-nav-admin" class="{% if companies_selected or payouts_selected or transfers_selected or analytics_selected or users_selected or waiver_agreement_templates_selected or white_labels_selected or tickets_selected or sent_to_me_selected %}selected{% endif %}">
-          <span>{{ 'dashboard.nav.admin' | t }}</span>
+        {% if current_user.has_seller_profile? %}
 
-          <ul>
-            {% if payouts_show and current_user.has_buyer_profile? %}
-              <li id="dashboard-nav-payouts" class="{% if payouts_selected %}selected{% endif %}">
-                <a href="{{ payouts_path }}">{{ 'dashboard.nav.payouts' | t }}</a>
-              </li>
-            {% endif %}
+          <li id="dashboard-nav-admin" class="{% if companies_selected or payouts_selected or transfers_selected or analytics_selected or users_selected or waiver_agreement_templates_selected or white_labels_selected or tickets_selected or sent_to_me_selected %}selected{% endif %}">
+            <span>{{ 'dashboard.nav.admin' | t }}</span>
 
-            {% if transfers_show and current_user.has_buyer_profile? %}
-              <li id="dashboard-nav-transfers" class="{% if transfers_selected %}selected{% endif %}">
-                <a href="{{ transfers_path }}">{{ 'dashboard.nav.transfers' | t }}</a>
-              </li>
-            {% endif %}
+            <ul>
+              {% if payouts_show and current_user.has_buyer_profile? %}
+                <li id="dashboard-nav-payouts" class="{% if payouts_selected %}selected{% endif %}">
+                  <a href="{{ payouts_path }}">{{ 'dashboard.nav.payouts' | t }}</a>
+                </li>
+              {% endif %}
 
-            {% if analytics_show %}
-              <li id="dashboard-nav-analytics" class="{% if analytics_selected %}selected{% endif %}">
-                <a href="{{ analytics_path }}">{{ 'dashboard.nav.analytics' | t }}</a>
-              </li>
-            {% endif %}
-          </ul>
-        </li>
+              {% if transfers_show and current_user.has_buyer_profile? %}
+                <li id="dashboard-nav-transfers" class="{% if transfers_selected %}selected{% endif %}">
+                  <a href="{{ transfers_path }}">{{ 'dashboard.nav.transfers' | t }}</a>
+                </li>
+              {% endif %}
+
+              {% if analytics_show %}
+                <li id="dashboard-nav-analytics" class="{% if analytics_selected %}selected{% endif %}">
+                  <a href="{{ analytics_path }}">{{ 'dashboard.nav.analytics' | t }}</a>
+                </li>
+              {% endif %}
+            </ul>
+          </li>
+        {% endif %}
       {% endif %}
 
       {% comment %} Blog menu {% endcomment %}
