--- a/lib/tasks/litvault/liquid_views/dashboard/company/transactables/_enquirer_view.liquid
+++ b/lib/tasks/litvault/liquid_views/dashboard/company/transactables/_enquirer_view.liquid
@@ -56,7 +56,6 @@
     {% assign orders = current_user | get_enquirer_draft_orders: transactable %}
 
     {% if orders != empty %}
-      {% assign order = orders.last %}
       <h3>Offer</h3>
       <div class="table-responsive">
         <table class="table table-transactable-details">
@@ -68,24 +67,26 @@
             </tr>
           </thead>
           <tbody>
-            <tr>
-              <td>{{ order.created_at | to_date | l: 'short' }}</td>
-              <td>
-                {{ 'reservations.states.' | append: order.state | t }}
-              </td>
-              {% if order.unconfirmed_or_draft? %}
-                <td class="actions">
-                  {% if order.is_draft? %}
-                    <a class="btn btn-info" href="{{ 'edit_dashboard_order_path' | generate_url: order.id }}">{{ 'general.edit' | t }}</a>
-                  {% endif %}
-                  <a class="btn btn-danger" href="{{ 'enquirer_cancel_dashboard_order_path' | generate_url: order.id }}" data-method="post" data-confirm="Are you sure you want to cancel?">{{ 'general.cancel' | t }}</a>
+            {% for order in orders %}
+              <tr>
+                <td>{{ order.created_at | to_date | l: 'short' }}</td>
+                <td>
+                  {{ 'reservations.states.' | append: order.state | t }}
                 </td>
-              {% elsif order.confirmed? %}
-                <td class="actions">Confirmed at {{ order.confirmed_at | l: 'long' }}</td>
-              {% else %}
-                <td class="actions">Cancelled at {{ order.id }}</td>
-              {% endif %}
-            </tr>
+                {% if order.unconfirmed_or_draft? %}
+                  <td class="actions">
+                    {% if order.is_draft? %}
+                      <a class="btn btn-info" href="{{ 'edit_dashboard_order_path' | generate_url: order.id }}">{{ 'general.edit' | t }}</a>
+                    {% endif %}
+                    <a class="btn btn-danger" href="{{ 'enquirer_cancel_dashboard_order_path' | generate_url: order.id }}" data-method="post" data-confirm="Are you sure you want to cancel?">{{ 'general.cancel' | t }}</a>
+                  </td>
+                {% elsif order.confirmed? %}
+                  <td class="actions">Confirmed at {{ order.confirmed_at | l: 'long' }}</td>
+                {% else %}
+                  <td class="actions">Cancelled at {{ order.archived_at  | l: 'long'  }}</td>
+                {% endif %}
+              </tr>
+            {% endfor %}
           </tbody>
         </table>
       </div>
