--- a/lib/tasks/litvault/liquid_views/dashboard/company/transactables/_lister_actions.liquid
+++ b/lib/tasks/litvault/liquid_views/dashboard/company/transactables/_lister_actions.liquid
@@ -6,10 +6,10 @@
 
   {% if current_status == 'in progress' %}
     <li>
-      {% assign form_url = order.offer_cancel_url %}
+      {% assign form_url = order.order_complete_url %}
 
       {% form_for order, url: @form_url, method: 'post' %}
-        <input type='submit' class="btn btn-warning" value='Close case' data-confirm="Are you sure that you want to cancel this offer?">
+        <input type='submit' class="btn btn-warning" value='Complete Case' data-confirm="Are you sure that you want to complete this offer?">
       {% endform_for %}
     </li>
   {% endif %}
