NM-6190 improve performance of page

--- a/app/views/pages/show.html.haml
+++ b/app/views/pages/show.html.haml
@@ -1,7 +1,5 @@
-- page_html_content = LiquidView.new(self).render(@page.html_content)
-
 - title @page.metadata_title.presence || @page.path
-- meta_description @page.metadata_meta_description.presence || truncate(strip_tags(page_html_content.try(:squish)), length: 160)
+- meta_description @page.metadata_meta_description
 - canonical_url @page.metadata_canonical_url.presence || request.original_url
 
 = content_for :hero do
@@ -10,4 +8,4 @@
 %style
   = @page.css_content
 
-= page_html_content
+= LiquidView.new(self).render(@page.html_content)
