--- a/lib/tasks/volte/liquid_views/listings--show.liquid
+++ b/lib/tasks/volte/liquid_views/listings--show.liquid
@@ -58,8 +58,7 @@
 
       <div class="image-gallery__controls-container">
         <ul class="image-gallery__zoom-controls">
-          <!-- Temp. disabled -->
-          <!--<li><a href="#" data-toggle="modal" data-target="#fullscreen-gallery"><i class="fa fa-arrows-alt" aria-hidden="true"></i></a></li> -->
+          <li><a href="#" data-toggle="modal" data-target="#fullscreen-gallery" data-image-gallery-fullscreen><i class="fa fa-arrows-alt" aria-hidden="true"></i></a></li>
           <li><a href="#" data-image-gallery-zoom="+1"><i class="fa fa-plus" aria-hidden="true"></i></a></li>
           <li><a href="#" data-image-gallery-zoom="-1"><i class="fa fa-minus" aria-hidden="true"></i></a></li>
         </ul>
