--- a/lib/tasks/litvault/liquid_views/search/_list_people.liquid
+++ b/lib/tasks/litvault/liquid_views/search/_list_people.liquid
@@ -4,7 +4,7 @@
 
       {% include 'search/user-case-toggler', search_type: 'user' %}
 
-      <form action="/search" method="get" class="search-form">
+      <form action="{{  'search_path' | generate_url: search_type: 'people' }}" method="get" class="search-form">
         <div class="fields">
           <input type="hidden" name="transactable_type_class" value="InstanceProfileType">
           <input type="hidden" name="lg_custom_attributes[state][]" value="{{ searcher.lg_custom_attributes_hash['state'] }}">
@@ -45,12 +45,12 @@
     <section class="search-results">
 
       <div class="search-results-query-info">
-        <span class="results-count"><b>{{ searcher.result_count }}</b> Result(s) Found</span>
+        <span id='search_results_count' class="results-count"><b>{{ searcher.result_count }}</b> result(s) </span>
       </div>
 
       <div class="search-results-items" id="results">
         {% for user in searcher.results %}
-          <article class="search-result user-a" id="user-{{ user.id }}">
+          <article class="search-result user-a listing" id="user-{{ user.id }}">
 
             <header class="search-result-header">
               <div class="h">
