--- a/app/views/instance_admin/custom_attributes/_form.html.haml
+++ b/app/views/instance_admin/custom_attributes/_form.html.haml
@@ -28,21 +28,18 @@
     .input-container.col-xs-6
       = f.input :valid_values, label: t('instance_admin.manage.custom_attributes.valid_values_separate_with_comma'), wrapper_html_options: { class: 'for-select-tag' }, input_html: { value: f.object.valid_values.join(', '), style: "width: 100%;" }
   .row
-    .input-container.col-xs-4
-      = f.input :required, as: :boolean, inline_label: true
-    .input-container.col-xs-4
-      = f.input :min_length, input_html: { class: 'form-control' }
-    .input-container.col-xs-4
-      = f.input :max_length, input_html: { class: 'form-control' }
-  .row
-    .input-container.col-xs-12
-      = f.input :validation_only_on_update, as: :boolean, inline_label: true
-
-  .row
     .input-container.col-xs-6
       = f.input :input_html_options_string, label: t('instance_admin.manage.custom_attributes.input_html_options'), input_html: { value: f.object.input_html_options.map { |k, v| "#{k} => #{v}"}.join(', '), class: 'form-control' }
     .input-container.col-xs-6
       = f.input :wrapper_html_options_string, label: t('instance_admin.manage.custom_attributes.wrapper_html_options'), input_html: { value: f.object.wrapper_html_options.map { |k, v| "#{k} => #{v}"}.join(', '), class: 'form-control' }
+
+
+  %h2 Custom Validators
+  .custom-validator.nested-fields-set
+    = f.simple_fields_for :custom_validators  do |custom_validator_form|
+      = render 'instance_admin/custom_attributes/custom_validator_fields', f: custom_validator_form, show_remove: true
+    .add-link.clearfix
+      = link_to_add_association 'Add new validator', f, :custom_validators, partial: 'instance_admin/custom_attributes/custom_validator_fields', class: 'btn btn-primary', render_options: { locals: { show_remove: true } }
 
   = content_for :header_buttons do
     = f.button :submit, t('instance_admin.save'), class: 'btn btn-blue pull-right', data: { 'submit-form' => 1, 'form-selector' => 'form' }
