--- a/app/views/instance_admin/custom_validators/_form.html.haml
+++ b/app/views/instance_admin/custom_validators/_form.html.haml
@@ -1,23 +1,8 @@
 = simple_form_for [:instance_admin, @controller_scope, @validatable, resource], :html => { :multipart => true} do |f|
   .content-container
-    .row
-      .input-container.col-xs-6
-        = f.input :field_name, collection: @attributes
-      .input-container.col-xs-6
-        = f.input :valid_values, label: t('instance_admin.manage.custom_validators.valid_values_separate_with_comma'), wrapper_html_options: { class: 'for-select-tag' }, input_html: { value: f.object.valid_values.join(', '), style: "width: 100%;" }
-    .row
-      .input-container.col-xs-4
-        = f.input :required, as: :boolean, inline_label: true
-      .input-container.col-xs-4
-        = f.input :min_length, input_html: { class: 'form-control' }
-      .input-container.col-xs-4
-        = f.input :max_length, input_html: { class: 'form-control' }
-    .row
-      .input-container.col-xs-4
-        = f.input :regex_validation, as: :boolean, inline_label: true
-      .input-container.col-xs-8
-        = f.input :regex_expression, input_html: { class: 'form-control' }
-
+    .input-container.col-xs-6
+      = f.input :field_name, collection: @attributes
+    = render 'instance_admin/custom_attributes/custom_validator_fields', f: f
   = content_for :header_buttons do
     = f.button :submit, t('instance_admin.save'), class: 'btn btn-blue pull-right', data: { 'submit-form' => 1, 'form-selector' => 'form' }
 
