--- a/lib/tasks/litvault/liquid_views/dashboard/company/transactables/_enquirer_actions.liquid
+++ b/lib/tasks/litvault/liquid_views/dashboard/company/transactables/_enquirer_actions.liquid
@@ -2,7 +2,7 @@
 
   <li>
   {% if transactable_collaborator.approved_by_owner? %}
-    <a href="{{ transactable.show_path }}" class="btn btn-default">Project Details</a>
+    <a href="{{ transactable.show_path }}" class="btn btn-default">View Case Details</a>
   {% else %}
     <a href="{{ transactable_collaborator.enquirerer_destroy_path }}" data-method="delete" data-confirm="Are you sure?" class="btn btn-default">Cancel Request</a>
   {% endif %}
