--- a/lib/tasks/volte/liquid_views/waiver_agreement_templates--show.liquid
+++ b/lib/tasks/volte/liquid_views/waiver_agreement_templates--show.liquid
@@ -2,7 +2,10 @@
 partial: false
 ---
 
-<h2>{{ waiver_agreement_template.name }}</h2>
+<header class="dialog__header">
+  <h2>{{ waiver_agreement_template.name }}</h2>
+</header>
+
 
 <p><strong>{{ current_user.name }}</strong> agrees to:</p>
 
@@ -12,3 +15,4 @@ partial: false
   <li>For Item: <strong>{{ @transactable.name }}</strong></li>
   <li>Bond Value: <strong>{{ transactable.properties.bond_value }}</strong></li>
 </ul>
+
